parser.output
Terminals unused in grammar

   NUM
   LET
   TILDA


State 24 conflicts: 26 reduce/reduce
State 70 conflicts: 13 shift/reduce
State 73 conflicts: 13 shift/reduce
State 120 conflicts: 13 shift/reduce
State 121 conflicts: 13 shift/reduce
State 122 conflicts: 13 shift/reduce
State 123 conflicts: 13 shift/reduce
State 124 conflicts: 13 shift/reduce
State 125 conflicts: 13 shift/reduce
State 126 conflicts: 13 shift/reduce
State 127 conflicts: 13 shift/reduce
State 128 conflicts: 13 shift/reduce
State 129 conflicts: 13 shift/reduce
State 130 conflicts: 13 shift/reduce
State 131 conflicts: 13 shift/reduce
State 132 conflicts: 13 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Prelude RoutineDeclList Block DOT

    2 Prelude: ConstDecl TypeDecl VarDecl

    3 RoutineDeclList: RoutineDeclList RoutineDeclListItem
    4                | %empty

    5 RoutineDeclListItem: ProcedureDecl
    6                    | FunctionDecl

    7 ProcedureDecl: PROCEDURE IDENT LPAREN FormalParameters RPAREN DONE FORWARD DONE
    8              | PROCEDURE IDENT LPAREN FormalParameters RPAREN DONE Body DONE

    9 FormalParameters: ParameterSet ParameterSetList
   10                 | %empty

   11 ParameterSet: VarOrRef IdentList COLON Type

   12 VarOrRef: VAR
   13         | REF
   14         | %empty

   15 ParameterSetList: ParameterSetList ParameterSetListItem
   16                 | %empty

   17 ParameterSetListItem: DONE ParameterSet

   18 Body: Prelude Block

   19 FunctionDecl: FUNCTION IDENT LPAREN FormalParameters RPAREN COLON Type DONE FORWARD DONE
   20             | FUNCTION IDENT LPAREN FormalParameters RPAREN COLON Type DONE Body DONE

   21 ConstDecl: CONST Constant ConstantList
   22          | %empty

   23 ConstantList: ConstantList Constant
   24             | %empty

   25 Constant: IDENT EQUAL Expression DONE

   26 Expression: IDENT
   27           | NumericLiteral
   28           | CHARLIT
   29           | STRLIT
   30           | LPAREN Expression RPAREN
   31           | SUB Expression
   32           | Expression MULT Expression
   33           | Expression DIV Expression
   34           | Expression MOD Expression
   35           | Expression ADD Expression
   36           | Expression SUB Expression
   37           | Expression EQUAL Expression
   38           | Expression NOTEQUAL Expression
   39           | Expression LESS_THAN Expression
   40           | Expression LESS_THAN_OR_EQUAL Expression
   41           | Expression GREATER_THAN Expression
   42           | Expression GREATER_THAN_OR_EQUAL Expression
   43           | Expression AND Expression
   44           | NEGATION Expression
   45           | Expression OR Expression
   46           | IDENT LPAREN MysterySet RPAREN
   47           | CHR LPAREN Expression RPAREN
   48           | ORD LPAREN Expression RPAREN
   49           | PRED LPAREN Expression RPAREN
   50           | SUCC LPAREN Expression RPAREN
   51           | LValue

   52 MysterySet: Expression MysterySetList
   53           | %empty

   54 MysterySetList: MysterySetList MysterySetListItem
   55               | %empty

   56 MysterySetListItem: COMMA Expression

   57 NumericLiteral: DECINT
   58               | HEXINT
   59               | OCTINT

   60 TypeDecl: TYPE TypeList
   61         | %empty

   62 TypeList: TypeList TypeListItem
   63         | %empty

   64 TypeListItem: IDENT EQUAL Type DONE

   65 Type: SimpleType
   66     | RecordType
   67     | ArrayType

   68 SimpleType: IDENT

   69 RecordType: RECORD TypedLists END

   70 TypedLists: TypedLists TypedList
   71           | %empty

   72 TypedList: IdentList COLON Type DONE

   73 IdentList: IDENT IdentListExtraSet

   74 IdentListExtraSet: IdentListExtraSet IdentExtra
   75                  | %empty

   76 IdentExtra: COMMA IDENT

   77 ArrayType: ARRAY LBRACKET Expression COLON Expression RBRACKET OF Type

   78 VarDecl: VAR TypedList TypedLists
   79        | %empty

   80 Block: BEGIN_TOKEN StatementSequence END
   81      | %empty

   82 StatementSequence: Statement ExtraStatementList

   83 Statement: Assignment
   84          | IfStatement
   85          | WhileStatement
   86          | RepeatStatement
   87          | ForStatement
   88          | StopStatement
   89          | ReturnStatement
   90          | ReadStatement
   91          | WriteStatement
   92          | ProcedureCall
   93          | %empty

   94 Assignment: LValue ASSIGN Expression

   95 LValue: IDENT LValueList

   96 LValueList: LValueList LValueItem
   97           | %empty

   98 LValueItem: DOT IDENT
   99           | LBRACKET Expression RBRACKET

  100 IfStatement: IF Expression THEN StatementSequence ElseIfList Else END

  101 ElseIfList: ElseIfList ElseIfListItem
  102           | %empty

  103 ElseIfListItem: ELSEIF Expression THEN StatementSequence

  104 Else: ELSE StatementSequence
  105     | %empty

  106 WhileStatement: WHILE Expression DO StatementSequence END

  107 RepeatStatement: REPEAT StatementSequence UNTIL Expression

  108 ForStatement: FOR IDENT ASSIGN Expression Location Expression DO StatementSequence END

  109 Location: TO
  110         | DOWNTO

  111 StopStatement: STOP

  112 ReturnStatement: RETURN_TOKEN
  113                | RETURN_TOKEN Expression

  114 ReadStatement: READ LPAREN LValue CommaExpressionList RPAREN

  115 CommaExpressionList: CommaExpressionList CommaExpressionListItem
  116                    | %empty

  117 CommaExpressionListItem: COMMA Expression

  118 WriteStatement: WRITE LPAREN Expression CommaExpressionList RPAREN

  119 ProcedureCall: IDENT LPAREN ProcedureParams RPAREN

  120 ProcedureParams: Expression CommaExpressionList
  121                | %empty

  122 ExtraStatementList: ExtraStatementList ExtraStatement
  123                   | %empty

  124 ExtraStatement: DONE Statement


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 35
SUB (259) 31 36
MULT (260) 32
DIV (261) 33
DONE (262) 7 8 17 19 20 25 64 72 124
NUM (263)
IDENT (264) 7 8 19 20 25 26 46 64 68 73 76 95 98 108 119
EQUAL (265) 25 37 64
LET (266)
CONST (267) 21
VAR (268) 12 78
TYPE (269) 60
RECORD (270) 69
END (271) 69 80 100 106 108
COLON (272) 11 19 20 72 77
COMMA (273) 56 76 117
ARRAY (274) 77
LBRACKET (275) 77 99
RBRACKET (276) 77 99
OF (277) 77
BEGIN_TOKEN (278) 80
RETURN_TOKEN (279) 112 113
PROCEDURE (280) 7 8
FORWARD (281) 7 19
REF (282) 13
FUNCTION (283) 19 20
WHILE (284) 106
DO (285) 106 108
FOR (286) 108
TO (287) 109
DOWNTO (288) 110
STOP (289) 111
ASSIGN (290) 94 108
DOT (291) 1 98
IF (292) 100
THEN (293) 100 103
ELSEIF (294) 103
ELSE (295) 104
REPEAT (296) 107
UNTIL (297) 107
READ (298) 114
WRITE (299) 118
TILDA (300)
GREATER_THAN_OR_EQUAL (301) 42
LESS_THAN_OR_EQUAL (302) 40
LESS_THAN (303) 39
GREATER_THAN (304) 41
MOD (305) 34
NOTEQUAL (306) 38
OR (307) 45
AND (308) 43
NEGATION (309) 44
CHR (310) 47
ORD (311) 48
PRED (312) 49
SUCC (313) 50
LPAREN (314) 7 8 19 20 30 46 47 48 49 50 114 118 119
RPAREN (315) 7 8 19 20 30 46 47 48 49 50 114 118 119
CHARLIT (316) 28
STRLIT (317) 29
HEXINT (318) 58
OCTINT (319) 59
DECINT (320) 57


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
Program (67)
    on left: 1, on right: 0
Prelude (68)
    on left: 2, on right: 1 18
RoutineDeclList (69)
    on left: 3 4, on right: 1 3
RoutineDeclListItem (70)
    on left: 5 6, on right: 3
ProcedureDecl (71)
    on left: 7 8, on right: 5
FormalParameters (72)
    on left: 9 10, on right: 7 8 19 20
ParameterSet (73)
    on left: 11, on right: 9 17
VarOrRef (74)
    on left: 12 13 14, on right: 11
ParameterSetList (75)
    on left: 15 16, on right: 9 15
ParameterSetListItem (76)
    on left: 17, on right: 15
Body (77)
    on left: 18, on right: 8 20
FunctionDecl (78)
    on left: 19 20, on right: 6
ConstDecl (79)
    on left: 21 22, on right: 2
ConstantList (80)
    on left: 23 24, on right: 21 23
Constant (81)
    on left: 25, on right: 21 23
Expression (82)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51, on right: 25 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 45 47 48 49 50 52 56 77 94 99 100 103 106 107
    108 113 117 118 120
MysterySet (83)
    on left: 52 53, on right: 46
MysterySetList (84)
    on left: 54 55, on right: 52 54
MysterySetListItem (85)
    on left: 56, on right: 54
NumericLiteral (86)
    on left: 57 58 59, on right: 27
TypeDecl (87)
    on left: 60 61, on right: 2
TypeList (88)
    on left: 62 63, on right: 60 62
TypeListItem (89)
    on left: 64, on right: 62
Type (90)
    on left: 65 66 67, on right: 11 19 20 64 72 77
SimpleType (91)
    on left: 68, on right: 65
RecordType (92)
    on left: 69, on right: 66
TypedLists (93)
    on left: 70 71, on right: 69 70 78
TypedList (94)
    on left: 72, on right: 70 78
IdentList (95)
    on left: 73, on right: 11 72
IdentListExtraSet (96)
    on left: 74 75, on right: 73 74
IdentExtra (97)
    on left: 76, on right: 74
ArrayType (98)
    on left: 77, on right: 67
VarDecl (99)
    on left: 78 79, on right: 2
Block (100)
    on left: 80 81, on right: 1 18
StatementSequence (101)
    on left: 82, on right: 80 100 103 104 106 107 108
Statement (102)
    on left: 83 84 85 86 87 88 89 90 91 92 93, on right: 82 124
Assignment (103)
    on left: 94, on right: 83
LValue (104)
    on left: 95, on right: 51 94 114
LValueList (105)
    on left: 96 97, on right: 95 96
LValueItem (106)
    on left: 98 99, on right: 96
IfStatement (107)
    on left: 100, on right: 84
ElseIfList (108)
    on left: 101 102, on right: 100 101
ElseIfListItem (109)
    on left: 103, on right: 101
Else (110)
    on left: 104 105, on right: 100
WhileStatement (111)
    on left: 106, on right: 85
RepeatStatement (112)
    on left: 107, on right: 86
ForStatement (113)
    on left: 108, on right: 87
Location (114)
    on left: 109 110, on right: 108
StopStatement (115)
    on left: 111, on right: 88
ReturnStatement (116)
    on left: 112 113, on right: 89
ReadStatement (117)
    on left: 114, on right: 90
CommaExpressionList (118)
    on left: 115 116, on right: 114 115 118 120
CommaExpressionListItem (119)
    on left: 117, on right: 115
WriteStatement (120)
    on left: 118, on right: 91
ProcedureCall (121)
    on left: 119, on right: 92
ProcedureParams (122)
    on left: 120 121, on right: 119
ExtraStatementList (123)
    on left: 122 123, on right: 82 122
ExtraStatement (124)
    on left: 124, on right: 122


State 0

    0 $accept: . Program $end

    CONST  shift, and go to state 1

    $default  reduce using rule 22 (ConstDecl)

    Program    go to state 2
    Prelude    go to state 3
    ConstDecl  go to state 4


State 1

   21 ConstDecl: CONST . Constant ConstantList

    IDENT  shift, and go to state 5

    Constant  go to state 6


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 3

    1 Program: Prelude . RoutineDeclList Block DOT

    $default  reduce using rule 4 (RoutineDeclList)

    RoutineDeclList  go to state 8


State 4

    2 Prelude: ConstDecl . TypeDecl VarDecl

    TYPE  shift, and go to state 9

    $default  reduce using rule 61 (TypeDecl)

    TypeDecl  go to state 10


State 5

   25 Constant: IDENT . EQUAL Expression DONE

    EQUAL  shift, and go to state 11


State 6

   21 ConstDecl: CONST Constant . ConstantList

    $default  reduce using rule 24 (ConstantList)

    ConstantList  go to state 12


State 7

    0 $accept: Program $end .

    $default  accept


State 8

    1 Program: Prelude RoutineDeclList . Block DOT
    3 RoutineDeclList: RoutineDeclList . RoutineDeclListItem

    BEGIN_TOKEN  shift, and go to state 13
    PROCEDURE    shift, and go to state 14
    FUNCTION     shift, and go to state 15

    $default  reduce using rule 81 (Block)

    RoutineDeclListItem  go to state 16
    ProcedureDecl        go to state 17
    FunctionDecl         go to state 18
    Block                go to state 19


State 9

   60 TypeDecl: TYPE . TypeList

    $default  reduce using rule 63 (TypeList)

    TypeList  go to state 20


State 10

    2 Prelude: ConstDecl TypeDecl . VarDecl

    VAR  shift, and go to state 21

    $default  reduce using rule 79 (VarDecl)

    VarDecl  go to state 22


State 11

   25 Constant: IDENT EQUAL . Expression DONE

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    Expression      go to state 36
    NumericLiteral  go to state 37
    LValue          go to state 38


State 12

   21 ConstDecl: CONST Constant ConstantList .
   23 ConstantList: ConstantList . Constant

    IDENT  shift, and go to state 5

    $default  reduce using rule 21 (ConstDecl)

    Constant  go to state 39


State 13

   80 Block: BEGIN_TOKEN . StatementSequence END

    IDENT         shift, and go to state 40
    RETURN_TOKEN  shift, and go to state 41
    WHILE         shift, and go to state 42
    FOR           shift, and go to state 43
    STOP          shift, and go to state 44
    IF            shift, and go to state 45
    REPEAT        shift, and go to state 46
    READ          shift, and go to state 47
    WRITE         shift, and go to state 48

    $default  reduce using rule 93 (Statement)

    StatementSequence  go to state 49
    Statement          go to state 50
    Assignment         go to state 51
    LValue             go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    RepeatStatement    go to state 55
    ForStatement       go to state 56
    StopStatement      go to state 57
    ReturnStatement    go to state 58
    ReadStatement      go to state 59
    WriteStatement     go to state 60
    ProcedureCall      go to state 61


State 14

    7 ProcedureDecl: PROCEDURE . IDENT LPAREN FormalParameters RPAREN DONE FORWARD DONE
    8              | PROCEDURE . IDENT LPAREN FormalParameters RPAREN DONE Body DONE

    IDENT  shift, and go to state 62


State 15

   19 FunctionDecl: FUNCTION . IDENT LPAREN FormalParameters RPAREN COLON Type DONE FORWARD DONE
   20             | FUNCTION . IDENT LPAREN FormalParameters RPAREN COLON Type DONE Body DONE

    IDENT  shift, and go to state 63


State 16

    3 RoutineDeclList: RoutineDeclList RoutineDeclListItem .

    $default  reduce using rule 3 (RoutineDeclList)


State 17

    5 RoutineDeclListItem: ProcedureDecl .

    $default  reduce using rule 5 (RoutineDeclListItem)


State 18

    6 RoutineDeclListItem: FunctionDecl .

    $default  reduce using rule 6 (RoutineDeclListItem)


State 19

    1 Program: Prelude RoutineDeclList Block . DOT

    DOT  shift, and go to state 64


State 20

   60 TypeDecl: TYPE TypeList .
   62 TypeList: TypeList . TypeListItem

    IDENT  shift, and go to state 65

    $default  reduce using rule 60 (TypeDecl)

    TypeListItem  go to state 66


State 21

   78 VarDecl: VAR . TypedList TypedLists

    IDENT  shift, and go to state 67

    TypedList  go to state 68
    IdentList  go to state 69


State 22

    2 Prelude: ConstDecl TypeDecl VarDecl .

    $default  reduce using rule 2 (Prelude)


State 23

   31 Expression: SUB . Expression

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    Expression      go to state 70
    NumericLiteral  go to state 37
    LValue          go to state 38


State 24

   26 Expression: IDENT .
   46           | IDENT . LPAREN MysterySet RPAREN
   95 LValue: IDENT . LValueList

    LPAREN  shift, and go to state 71

    ADD                    reduce using rule 26 (Expression)
    ADD                    [reduce using rule 97 (LValueList)]
    SUB                    reduce using rule 26 (Expression)
    SUB                    [reduce using rule 97 (LValueList)]
    MULT                   reduce using rule 26 (Expression)
    MULT                   [reduce using rule 97 (LValueList)]
    DIV                    reduce using rule 26 (Expression)
    DIV                    [reduce using rule 97 (LValueList)]
    DONE                   reduce using rule 26 (Expression)
    DONE                   [reduce using rule 97 (LValueList)]
    EQUAL                  reduce using rule 26 (Expression)
    EQUAL                  [reduce using rule 97 (LValueList)]
    END                    reduce using rule 26 (Expression)
    END                    [reduce using rule 97 (LValueList)]
    COLON                  reduce using rule 26 (Expression)
    COLON                  [reduce using rule 97 (LValueList)]
    COMMA                  reduce using rule 26 (Expression)
    COMMA                  [reduce using rule 97 (LValueList)]
    LBRACKET               reduce using rule 97 (LValueList)
    RBRACKET               reduce using rule 26 (Expression)
    RBRACKET               [reduce using rule 97 (LValueList)]
    DO                     reduce using rule 26 (Expression)
    DO                     [reduce using rule 97 (LValueList)]
    TO                     reduce using rule 26 (Expression)
    TO                     [reduce using rule 97 (LValueList)]
    DOWNTO                 reduce using rule 26 (Expression)
    DOWNTO                 [reduce using rule 97 (LValueList)]
    DOT                    reduce using rule 97 (LValueList)
    THEN                   reduce using rule 26 (Expression)
    THEN                   [reduce using rule 97 (LValueList)]
    ELSEIF                 reduce using rule 26 (Expression)
    ELSEIF                 [reduce using rule 97 (LValueList)]
    ELSE                   reduce using rule 26 (Expression)
    ELSE                   [reduce using rule 97 (LValueList)]
    UNTIL                  reduce using rule 26 (Expression)
    UNTIL                  [reduce using rule 97 (LValueList)]
    GREATER_THAN_OR_EQUAL  reduce using rule 26 (Expression)
    GREATER_THAN_OR_EQUAL  [reduce using rule 97 (LValueList)]
    LESS_THAN_OR_EQUAL     reduce using rule 26 (Expression)
    LESS_THAN_OR_EQUAL     [reduce using rule 97 (LValueList)]
    LESS_THAN              reduce using rule 26 (Expression)
    LESS_THAN              [reduce using rule 97 (LValueList)]
    GREATER_THAN           reduce using rule 26 (Expression)
    GREATER_THAN           [reduce using rule 97 (LValueList)]
    MOD                    reduce using rule 26 (Expression)
    MOD                    [reduce using rule 97 (LValueList)]
    NOTEQUAL               reduce using rule 26 (Expression)
    NOTEQUAL               [reduce using rule 97 (LValueList)]
    OR                     reduce using rule 26 (Expression)
    OR                     [reduce using rule 97 (LValueList)]
    AND                    reduce using rule 26 (Expression)
    AND                    [reduce using rule 97 (LValueList)]
    RPAREN                 reduce using rule 26 (Expression)
    RPAREN                 [reduce using rule 97 (LValueList)]
    $default               reduce using rule 26 (Expression)

    LValueList  go to state 72


State 25

   44 Expression: NEGATION . Expression

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    Expression      go to state 73
    NumericLiteral  go to state 37
    LValue          go to state 38


State 26

   47 Expression: CHR . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 74


State 27

   48 Expression: ORD . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 75


State 28

   49 Expression: PRED . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 76


State 29

   50 Expression: SUCC . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 77


State 30

   30 Expression: LPAREN . Expression RPAREN

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    Expression      go to state 78
    NumericLiteral  go to state 37
    LValue          go to state 38


State 31

   28 Expression: CHARLIT .

    $default  reduce using rule 28 (Expression)


State 32

   29 Expression: STRLIT .

    $default  reduce using rule 29 (Expression)


State 33

   58 NumericLiteral: HEXINT .

    $default  reduce using rule 58 (NumericLiteral)


State 34

   59 NumericLiteral: OCTINT .

    $default  reduce using rule 59 (NumericLiteral)


State 35

   57 NumericLiteral: DECINT .

    $default  reduce using rule 57 (NumericLiteral)


State 36

   25 Constant: IDENT EQUAL Expression . DONE
   32 Expression: Expression . MULT Expression
   33           | Expression . DIV Expression
   34           | Expression . MOD Expression
   35           | Expression . ADD Expression
   36           | Expression . SUB Expression
   37           | Expression . EQUAL Expression
   38           | Expression . NOTEQUAL Expression
   39           | Expression . LESS_THAN Expression
   40           | Expression . LESS_THAN_OR_EQUAL Expression
   41           | Expression . GREATER_THAN Expression
   42           | Expression . GREATER_THAN_OR_EQUAL Expression
   43           | Expression . AND Expression
   45           | Expression . OR Expression

    ADD                    shift, and go to state 79
    SUB                    shift, and go to state 80
    MULT                   shift, and go to state 81
    DIV                    shift, and go to state 82
    DONE                   shift, and go to state 83
    EQUAL                  shift, and go to state 84
    GREATER_THAN_OR_EQUAL  shift, and go to state 85
    LESS_THAN_OR_EQUAL     shift, and go to state 86
    LESS_THAN              shift, and go to state 87
    GREATER_THAN           shift, and go to state 88
    MOD                    shift, and go to state 89
    NOTEQUAL               shift, and go to state 90
    OR                     shift, and go to state 91
    AND                    shift, and go to state 92


State 37

   27 Expression: NumericLiteral .

    $default  reduce using rule 27 (Expression)


State 38

   51 Expression: LValue .

    $default  reduce using rule 51 (Expression)


State 39

   23 ConstantList: ConstantList Constant .

    $default  reduce using rule 23 (ConstantList)


State 40

   95 LValue: IDENT . LValueList
  119 ProcedureCall: IDENT . LPAREN ProcedureParams RPAREN

    LPAREN  shift, and go to state 93

    $default  reduce using rule 97 (LValueList)

    LValueList  go to state 72


State 41

  112 ReturnStatement: RETURN_TOKEN .
  113                | RETURN_TOKEN . Expression

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    $default  reduce using rule 112 (ReturnStatement)

    Expression      go to state 94
    NumericLiteral  go to state 37
    LValue          go to state 38


State 42

  106 WhileStatement: WHILE . Expression DO StatementSequence END

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    Expression      go to state 95
    NumericLiteral  go to state 37
    LValue          go to state 38


State 43

  108 ForStatement: FOR . IDENT ASSIGN Expression Location Expression DO StatementSequence END

    IDENT  shift, and go to state 96


State 44

  111 StopStatement: STOP .

    $default  reduce using rule 111 (StopStatement)


State 45

  100 IfStatement: IF . Expression THEN StatementSequence ElseIfList Else END

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    Expression      go to state 97
    NumericLiteral  go to state 37
    LValue          go to state 38


State 46

  107 RepeatStatement: REPEAT . StatementSequence UNTIL Expression

    IDENT         shift, and go to state 40
    RETURN_TOKEN  shift, and go to state 41
    WHILE         shift, and go to state 42
    FOR           shift, and go to state 43
    STOP          shift, and go to state 44
    IF            shift, and go to state 45
    REPEAT        shift, and go to state 46
    READ          shift, and go to state 47
    WRITE         shift, and go to state 48

    $default  reduce using rule 93 (Statement)

    StatementSequence  go to state 98
    Statement          go to state 50
    Assignment         go to state 51
    LValue             go to state 52
    IfStatement        go to state 53
    WhileStatement     go to state 54
    RepeatStatement    go to state 55
    ForStatement       go to state 56
    StopStatement      go to state 57
    ReturnStatement    go to state 58
    ReadStatement      go to state 59
    WriteStatement     go to state 60
    ProcedureCall      go to state 61


State 47

  114 ReadStatement: READ . LPAREN LValue CommaExpressionList RPAREN

    LPAREN  shift, and go to state 99


State 48

  118 WriteStatement: WRITE . LPAREN Expression CommaExpressionList RPAREN

    LPAREN  shift, and go to state 100


State 49

   80 Block: BEGIN_TOKEN StatementSequence . END

    END  shift, and go to state 101


State 50

   82 StatementSequence: Statement . ExtraStatementList

    $default  reduce using rule 123 (ExtraStatementList)

    ExtraStatementList  go to state 102


State 51

   83 Statement: Assignment .

    $default  reduce using rule 83 (Statement)


State 52

   94 Assignment: LValue . ASSIGN Expression

    ASSIGN  shift, and go to state 103


State 53

   84 Statement: IfStatement .

    $default  reduce using rule 84 (Statement)


State 54

   85 Statement: WhileStatement .

    $default  reduce using rule 85 (Statement)


State 55

   86 Statement: RepeatStatement .

    $default  reduce using rule 86 (Statement)


State 56

   87 Statement: ForStatement .

    $default  reduce using rule 87 (Statement)


State 57

   88 Statement: StopStatement .

    $default  reduce using rule 88 (Statement)


State 58

   89 Statement: ReturnStatement .

    $default  reduce using rule 89 (Statement)


State 59

   90 Statement: ReadStatement .

    $default  reduce using rule 90 (Statement)


State 60

   91 Statement: WriteStatement .

    $default  reduce using rule 91 (Statement)


State 61

   92 Statement: ProcedureCall .

    $default  reduce using rule 92 (Statement)


State 62

    7 ProcedureDecl: PROCEDURE IDENT . LPAREN FormalParameters RPAREN DONE FORWARD DONE
    8              | PROCEDURE IDENT . LPAREN FormalParameters RPAREN DONE Body DONE

    LPAREN  shift, and go to state 104


State 63

   19 FunctionDecl: FUNCTION IDENT . LPAREN FormalParameters RPAREN COLON Type DONE FORWARD DONE
   20             | FUNCTION IDENT . LPAREN FormalParameters RPAREN COLON Type DONE Body DONE

    LPAREN  shift, and go to state 105


State 64

    1 Program: Prelude RoutineDeclList Block DOT .

    $default  reduce using rule 1 (Program)


State 65

   64 TypeListItem: IDENT . EQUAL Type DONE

    EQUAL  shift, and go to state 106


State 66

   62 TypeList: TypeList TypeListItem .

    $default  reduce using rule 62 (TypeList)


State 67

   73 IdentList: IDENT . IdentListExtraSet

    $default  reduce using rule 75 (IdentListExtraSet)

    IdentListExtraSet  go to state 107


State 68

   78 VarDecl: VAR TypedList . TypedLists

    $default  reduce using rule 71 (TypedLists)

    TypedLists  go to state 108


State 69

   72 TypedList: IdentList . COLON Type DONE

    COLON  shift, and go to state 109


State 70

   31 Expression: SUB Expression .
   32           | Expression . MULT Expression
   33           | Expression . DIV Expression
   34           | Expression . MOD Expression
   35           | Expression . ADD Expression
   36           | Expression . SUB Expression
   37           | Expression . EQUAL Expression
   38           | Expression . NOTEQUAL Expression
   39           | Expression . LESS_THAN Expression
   40           | Expression . LESS_THAN_OR_EQUAL Expression
   41           | Expression . GREATER_THAN Expression
   42           | Expression . GREATER_THAN_OR_EQUAL Expression
   43           | Expression . AND Expression
   45           | Expression . OR Expression

    ADD                    shift, and go to state 79
    SUB                    shift, and go to state 80
    MULT                   shift, and go to state 81
    DIV                    shift, and go to state 82
    EQUAL                  shift, and go to state 84
    GREATER_THAN_OR_EQUAL  shift, and go to state 85
    LESS_THAN_OR_EQUAL     shift, and go to state 86
    LESS_THAN              shift, and go to state 87
    GREATER_THAN           shift, and go to state 88
    MOD                    shift, and go to state 89
    NOTEQUAL               shift, and go to state 90
    OR                     shift, and go to state 91
    AND                    shift, and go to state 92

    ADD                    [reduce using rule 31 (Expression)]
    SUB                    [reduce using rule 31 (Expression)]
    MULT                   [reduce using rule 31 (Expression)]
    DIV                    [reduce using rule 31 (Expression)]
    EQUAL                  [reduce using rule 31 (Expression)]
    GREATER_THAN_OR_EQUAL  [reduce using rule 31 (Expression)]
    LESS_THAN_OR_EQUAL     [reduce using rule 31 (Expression)]
    LESS_THAN              [reduce using rule 31 (Expression)]
    GREATER_THAN           [reduce using rule 31 (Expression)]
    MOD                    [reduce using rule 31 (Expression)]
    NOTEQUAL               [reduce using rule 31 (Expression)]
    OR                     [reduce using rule 31 (Expression)]
    AND                    [reduce using rule 31 (Expression)]
    $default               reduce using rule 31 (Expression)


State 71

   46 Expression: IDENT LPAREN . MysterySet RPAREN

    SUB       shift, and go to state 23
    IDENT     shift, and go to state 24
    NEGATION  shift, and go to state 25
    CHR       shift, and go to state 26
    ORD       shift, and go to state 27
    PRED      shift, and go to state 28
    SUCC      shift, and go to state 29
    LPAREN    shift, and go to state 30
    CHARLIT   shift, and go to state 31
    STRLIT    shift, and go to state 32
    HEXINT    shift, and go to state 33
    OCTINT    shift, and go to state 34
    DECINT    shift, and go to state 35

    $default  reduce using rule 53 (MysterySet)

    Expression      go to state 110
    MysterySet      go to state 111
    NumericLiteral  go to state 37
    LValue          go to state 38


State 72

   95 LValue: IDENT LValueList .
   96 LValueList: LValueList . LValueItem

    LBRACKET  shift, and go to state 112
    DOT       shift, and go to state 113

    $default  reduce using rule 95 (LValue)

    LValueItem  go to state 114


State 73

   32 Expression: Expression . MULT Expression
   33           | Expression . DIV Expression
   34           | Expression . MOD Expression
   35           | Expression . ADD Expression
   36           | Expression . SUB Expression
   37           | Expression . EQUAL Expression
   38           | Expression . NOTEQUAL Expression
   39           | Expression . LESS_THAN Expression
   40           | Expression . LESS_THAN_OR_EQUAL Expression
   41           | Expression . GREATER_THAN Expression
   42           | Expression . GREATER_THAN_OR_EQUAL Expression
   43           | Expression . AND Expression
   44           | NEGATION Expression .
   45           | Expression . OR Expression

    ADD                    shift, and go to state 79
    SUB                    shift, and go to state 80
    MULT                   shift, and go to state 81
    DIV                    shift, and go to state 82
    EQUAL                  shift, and go to state 84
    GREATER_THAN_OR_EQUAL  shift, and go to state 85
    LESS_THAN_OR_EQUAL     shift, and go to state 86
    LESS_THAN              shift, and go to state 87
    GREATER_THAN           shift, and go to state 88
    MOD                    shift, and go to state 89
    NOTEQUAL               shift, and go to state 90
    OR                     shift, and go to state 91
    AND                    shift, and go to state 92
